--- a/docs/support/index.mdx
+++ b/docs/support/index.mdx
@@ -27,9 +27,9 @@ If you get an error when you create an IBM Cloud&reg; account, first check wheth
 
 If you are getting an error while trying to create an account and your country is on the [Personal use availability](https://cloud.ibm.com/docs/account?topic=account-account-getting-started#signup-personalaccts) list, explore the following options:
 
-1. You can use [Documentation](/docs) and [Learning](/learning) resources without an account
-2. Create a [SkillsBuild account](https://www.ibm.com/academic/) if you are a university student
-3. [Create a Trial account](https://quantum.cloud.ibm.com/registration) for 30 days of free access (Note that you will likely lose access at the end of the trial)
+1. You can use [Documentation](/docs) and [Learning](/learning) resources without an account.
+2. Create a [SkillsBuild account](https://www.ibm.com/academic/) if you are a university student.
+3. [Create a Trial account](https://quantum.cloud.ibm.com/registration) for 30 days of free access (Note that you will likely lose access at the end of the trial).
 
 <Admonition type="caution" title="Note">
 If you are the **owner** of a Pay-As-You-Go or Subscription account, you need to create an IBM Cloud account and provide billing information for verification.
