--- a/docs/guides/instances.ipynb
+++ b/docs/guides/instances.ipynb
@@ -36,7 +36,7 @@
     "## Open Plan instance\n",
     "\n",
     "By default, users who sign up for an IBM Quantum account are assigned to the Open Plan.\n",
-    "On the Open Plan users are able to run quantum circuits on the world's best QPUs for free (up to 10 minutes quantum time per 28-day rolling window). The QPU usage can be tracked on the [Platform dashboard](https://quantum.cloud.ibm.com/) and the [Workloads](https://quantum.cloud.ibm.com/workloads) pages.\n",
+    "Open Plan users can run quantum circuits on the world's best QPUs for free (up to 10 minutes quantum time per 28-day rolling window). The QPU usage can be tracked on the [Platform dashboard](https://quantum.cloud.ibm.com/) and the [Workloads](https://quantum.cloud.ibm.com/workloads) pages.\n",
     "\n",
     "<span id=\"standard-plan\"></span>\n",
     "## Standard Plan instance\n",
