--- a/docs/guides/qiskit-transpiler-service.ipynb
+++ b/docs/guides/qiskit-transpiler-service.ipynb
@@ -30,7 +30,7 @@
     "The Qiskit Transpiler Service offers a Python library to seamlessly integrate this service and its capabilities into your current Qiskit patterns and workflows.\n",
     "\n",
     "<Admonition type=\"note\">\n",
-    "    This service is only available for IBM Quantum Premium Plan users.\n",
+    "    This service is only available for IBM Quantum Premium Plan users. As of today, the service is being migrated and may not be available. We recomment to use [the local mode](https://quantum.cloud.ibm.com/docs/en/guides/ai-transpiler-passes#run-the-ai-transpiler-passes-locally-or-on-the-cloud) for the AI passes.\n",
     "    The service is a beta release, subject to change.\n",
     "    If you have feedback or want to contact the developer team, please use this [Qiskit Slack Workspace channel](https://qiskit.slack.com/archives/C06KF8YHUAU).\n",
     "</Admonition>\n",
