--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -126,34 +126,35 @@ To copy the instance CRN, go to your [dashboard,](https://quantum.cloud.ibm.com/
     )
     ```
 
-<Admonition type="note">
-* The new channel name is `ibm_quantum_platform`. If you previously set your default channel to `ibm_quantum` in your saved credentials, you need to update that setting. If you were previously working with Qiskit Runtime on IBM Cloud, you can skip this.
+Setup details:
+   <Admonition type="note">
+   * The new channel name is `ibm_quantum_platform`. If you previously set your default channel to `ibm_quantum` in your saved credentials, you need to update that setting. If you were previously working with Qiskit Runtime on IBM Cloud, you can skip this.
 
-* It is not required to pass in an instance when saving an account or initializing the `QiskitRuntimeService()`. If an instance is not passed in, all instances will be checked when a backend is retrieved (`service.backend("backend_name")`). If an instance is passed into `save_account()`, or passed in during initialization, it is used as the default instance when retrieving backends. An instance passed in at initialization takes precedence over the one saved in the account. To copy the instance CRN, go to [Instances](https://quantum.cloud.ibm.com/instances) and click the copy icon at the end of the instance's row.
-</Admonition>
+   * It is not required to pass in an instance when saving an account or initializing the `QiskitRuntimeService()`. If an instance is not passed in, all instances will be checked when a backend is retrieved (`service.backend("backend_name")`). If an instance is passed into `save_account()`, or passed in during initialization, it is used as the default instance when retrieving backends. An instance passed in at initialization takes precedence over the one saved in the account. To copy the instance CRN, go to [Instances](https://quantum.cloud.ibm.com/instances) and click the copy icon at the end of the instance's row.
+   </Admonition>
 
-* New parameters, `region`, and `plans_preference`, have been added to the `QiskitRuntimeService()` initializer and the `save_account()` method. These can be used to prioritize certain instances on the new platform (`ibm_quantum_platform`, and temporarily, `ibm_cloud` channels) without explicitly providing the CRN.
-`region` allows you to set a region preference (`us-east` or `eu-de`), For example, if `us-east` is specified,
-then only instances from `us-east` will be checked. `plans_preference` takes a list of plans where instances will be prioritized in the order of plans given. For example, `['Open', 'Premium']` would prioritize all Open Plan instances, then all Premium Plan instances, and then the rest.
-* In addition to the IBM Cloud Resource Name (CRN), the instance name can also be passed in as the instance value.
-* If you have access to multiple accounts, only one account per API token can be used. The
-IBM Cloud API Token is treated as the account identifier and will unlock the resources associated with the account the token was created in. A list of your tokens per account can be found on the [API keys](https://cloud.ibm.com/iam/apikeys) page.
+   * New parameters, `region`, and `plans_preference`, have been added to the `QiskitRuntimeService()` initializer and the `save_account()` method. These can be used to prioritize certain instances on the new platform (`ibm_quantum_platform`, and temporarily, `ibm_cloud` channels) without explicitly providing the CRN.
+   `region` allows you to set a region preference (`us-east` or `eu-de`), For example, if `us-east` is specified,
+   then only instances from `us-east` will be checked. `plans_preference` takes a list of plans where instances will be prioritized in the order of plans given. For example, `['Open', 'Premium']` would prioritize all Open Plan instances, then all Premium Plan instances, and then the rest.
+   * In addition to the IBM Cloud Resource Name (CRN), the instance name can also be passed in as the instance value.
+   * If you have access to multiple accounts, only one account per API token can be used. The
+   IBM Cloud API Token is treated as the account identifier and will unlock the resources associated with the account the token was created in. A list of your tokens per account can be found on the [API keys](https://cloud.ibm.com/iam/apikeys) page.
 
-Run `exit()` to close the Python shell. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitRuntimeService()`.
+   Run `exit()` to close the Python shell. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitRuntimeService()`.
 
-```python
-# Load default saved credentials
-service = QiskitRuntimeService()
-```
-```python
-# Load saved credentials if you specified a name
-service = QiskitRuntimeService(name="account-name")
-```
+   ```python
+   # Load default saved credentials
+   service = QiskitRuntimeService()
+   ```
+   ```python
+   # Load saved credentials if you specified a name
+   service = QiskitRuntimeService(name="account-name")
+   ```
 
-* If you previously saved an IBM Quantum Platform Classic account as the default, specify `set_as_default=True` for your new account when you use the `save_account()` method.
-* If no accounts are saved as the default, an account saved on the new IBM Quantum Platform with `ibm_quantum_platform` as the channel name will be used as the default when initializing your account. `set_as_default=True` can still be used to set an account with a certain configuration of credentials as the default.
-* If you are saving multiple accounts per channel, consider using the `name` parameter to differentiate them.
-* Credentials are saved to `$HOME/.qiskit/qiskit-ibm.json`.  Do not manually edit this file.
+   * If you previously saved an IBM Quantum Platform Classic account as the default, specify `set_as_default=True` for your new account when you use the `save_account()` method.
+   * If no accounts are saved as the default, an account saved on the new IBM Quantum Platform with `ibm_quantum_platform` as the channel name will be used as the default when initializing your account. `set_as_default=True` can still be used to set an account with a certain configuration of credentials as the default.
+   * If you are saving multiple accounts per channel, consider using the `name` parameter to differentiate them.
+   * Credentials are saved to `$HOME/.qiskit/qiskit-ibm.json`.  Do not manually edit this file.
 
 <span id="untrusted-machine"></span>
 #### Untrusted Machine
