Apply suggestions from code review
Co-authored-by: Jessie Yu <jessieyu@us.ibm.com>

--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -287,7 +287,7 @@
    "id": "0378a45f-7a28-48bc-993d-0e4308d38bfc",
    "metadata": {},
    "source": [
-    "## Limitations\n",
+    "## Qiskit Runtime Limitations\n",
     "\n",
     "Be aware of the following constraints when running dynamic circuits in Qiskit Runtime.  Note that as new features and improvements are added throughout the coming year, some of these limitations will be lifted.\n",
     "\n",
@@ -366,7 +366,7 @@
     "            ```python\n",
     "               cr1 = ClassicalRegister(32)\n",
     "               cr2 = ClassicalRegister(32)\n",
-    "               qr = QuantumRegister(100)\n",
+    "               qr = QuantumRegister(64)\n",
     "               circuit = QuantumCircuit(qr, cr1, cr2)\n",
     "               ...\n",
     "               circ.measure(qr[0:32], cr1)\n",
@@ -381,7 +381,7 @@
     "        ```python\n",
     "         cr1 = ClassicalRegister(32)\n",
     "         cr2 = ClassicalRegister(32)\n",
-    "         qr = QuantumRegister(100)\n",
+    "         qr = QuantumRegister(64)\n",
     "          ...\n",
     "         circ.measure(qr[0:32], cr1)\n",
     "         with circ.if_test((cr1, 32)):\n",
