--- a/docs/migration-guides/index.mdx
+++ b/docs/migration-guides/index.mdx
@@ -9,7 +9,7 @@ description: Migrate to using the newest from Qiskit and Qiskit Runtime
 These migration guides help you more effectively use Qiskit and Qiskit Runtime:
 
 * Migrate to the new version of IBM Quantum&reg; Platform
-   * [Migrate to the new IBM Quantum Platform](/docs/migration-guides/classic-iqp-to-cloud-iqp)
+   * [Migrate to the upgraded IBM Quantum Platform](/docs/migration-guides/classic-iqp-to-cloud-iqp)
    * [Migrate from using the Qiskit Runtime REST API on IBM Quantum Platform Classic to using the new Qiskit Runtime REST API](/docs/migration-guides/migrate-classic-rest-api#from-classic)
    * [Migrate from using the Qiskit Runtime on IBM Cloud REST API to using the REST API for the new version of IBM Quantum Platform](/docs/migration-guides/migrate-classic-rest-api#from-runtime-cloud)
 * Migrate to Qiskit v1.0
