--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -20,7 +20,7 @@ If you have been invited by your organization to join an account:
 If you are a new user, ignore this guide and start with the [Introduction to Qiskit](/docs/guides/index) guide.
 </Admonition>
 
-Find the recent changes to the new platform on the [Latest updates page,](/docs/guides/latest-updates) which is updated every two weeks.
+Find the recent changes to the new platform on the [Latest updates page,](/docs/guides/latest-updates) which is updated regularly.
 
 ## When should I make the transition?
 
