Incident/operations mgmt table

--- a/docs/security/responsibilities.mdx
+++ b/docs/security/responsibilities.mdx
@@ -5,3 +5,16 @@ description: Learn about the management responsibilities and terms and condition
 
 # Understanding your responsibilities when using Qiskit Runtime
 
+Review the following sections for the specific responsibilities for you and for IBM&reg; when you use Qiskit Runtime. For the overall terms of use, see [Terms and Notices](https://cloud.ibm.com/docs/overview/terms-of-use?topic=overview-terms) for IBM Cloud&reg;.
+
+## Incident and operations management
+
+Incident and operations management includes tasks such as monitoring, event management, high availability, problem determination, recovery, and full state backup and recovery.
+
+| Task | IBM responsibilities | Your responsibilities |
+| --- | --- | --- |
+|Infrastructure health management|<ul><li>Continuously deliver new features, updates, and bug fixes as needed in a transparent manner.</li><li>Provide notifications for planned maintenance, security bulletins, or unplanned outages.</li></ul> | <ul><li>Set preferences to receive emails about service notifications.</li><li>Monitor the IBM Cloud status page for general announcements.</li></ul> |
+|Infrastructure health monitoring and notification| <ul><li>Remediate all infrastructure environment issues.</li><li> Notify customers of applicable incidents.</li></ul> | <ul><li> Ascertain the impact of each incident that is reported.</li><li>Engage IBM Support as required.</li></ul>|
+|Maintain IBM Cloud high availability SLA| Operate Qiskit Runtime in accordance with the [IBM Cloud Public Service Level Agreements](https://cloud.ibm.com/docs/overview?topic=overview-slas) (SLAs). | Follow high availability best practices. |
+
+
