rest of sections

--- a/docs/security/responsibilities.mdx
+++ b/docs/security/responsibilities.mdx
@@ -17,4 +17,43 @@ Incident and operations management includes tasks such as monitoring, event mana
 |Infrastructure health monitoring and notification| <ul><li>Remediate all infrastructure environment issues.</li><li> Notify customers of applicable incidents.</li></ul> | <ul><li> Ascertain the impact of each incident that is reported.</li><li>Engage IBM Support as required.</li></ul>|
 |Maintain IBM Cloud high availability SLA| Operate Qiskit Runtime in accordance with the [IBM Cloud Public Service Level Agreements](https://cloud.ibm.com/docs/overview?topic=overview-slas) (SLAs). | Follow high availability best practices. |
 
+## Change management
 
+Change management includes tasks such as deployment, configuration, upgrades, patching, configuration changes, and deletion.
+
+| Task | IBM responsibilities | Your responsibilities |
+| --- | --- | --- |
+| Major version upgrades | Provide availability and tools for major version updates. | Migrate to a supported version before end-of-support for an old version. |
+| API version changes | Versioning the REST APIs. | Integrate with the wanted version of REST APIs. |
+| Updates, fixes, and new features | <ul><li>Provide regular updates, bug fixes, and new features, following a continuous delivery model in a way that is transparent.</li><li>Post notifications for changes that impact you as the customer.</li></ul> | <ul><li>Set preferences to receive email notifications and monitor the IBM Cloud status page for general announcements.</li><li>Read system-generated notifications and taking appropriate action.</li></ul> |
+
+## Identity and access management
+
+Identity and access management includes tasks such as authentication, authorization, access control policies, and approving, granting, and revoking access.
+
+| Task | IBM responsibilities | Your responsibilities |
+| --- | --- | --- |
+| Identity and access control | Provide the ability to manage and restrict access to resources through IBM Cloud. | Grant, revoke, and manage access to resources through Cloud Identity and Access Management (IAM). |
+| Service authentication | Ensure that only authenticated users have access to your Qiskit Runtime services and resources. | <ul><li>Safeguard your API key from unauthorized access.</li><li>Rotate and update your API keys according to your security policy requirements.</li></ul> |
+| Observability | Allow integration of IBM Cloud Activity Tracker Event Routing to audit user actions. | Set up [IBM Cloud Activity Tracker Event Routing](https://cloud.ibm.com/docs/vmware-service?topic=vmware-service-at_events) or other functions to track user activity. |
+| Usage of Direct Access API (((PLACEHOLDER if needed))) | | | 
+
+## Security and regulation compliance
+
+Security and regulation compliance includes tasks such as security controls implementation and compliance certification.
+
+| Task | IBM responsibilities | Your responsibilities |
+| --- | --- | --- |
+| General | <ul><li>Maintain controls commensurate to various industry compliance standards.</li><li>Monitor, isolate, and recover service functionality.</li><li>Monitor and report the health of service interfaces.</li></ul> | Ensure that personal and regulated data is not provided. |
+| Vulnerabilities | Monitor to detect vulnerability and security compliance issues. | <ul><li>Keep informed about possible vulnerabilities and security issues through security bulletins that provide potential remediation actions.</li><li>Check the [IBM Cloud status website](https://cloud.ibm.com/status) to find announcements and security bulletins about key events that affect the IBM Cloud platform, infrastructure, and major services.</li></ul> |
+| Encryption | Encrypt data when it is transmitted on any public networks and within the Cloud Service's private data center network. Encryption methods such as HTTPS and TLS are used to protect data in motion. | Ensure, as required, that your connection is encrypted end-to-end. |
+| Security | <ul><li>Ensure the security of data on disk and data in motion within its infrastructure.</li><li>Provide a secure service that complies with key standards.</li></ul> | Restrict user access to the appropriate resources and resource groups. |
+
+## Disaster recovery
+
+| Task | IBM responsibilities | Your responsibilities |
+| --- | --- | --- |
+| General | Restore or rebuild the provisioning environments and resources in the affected regions. | <ul><li>Monitor instance and resource states.</li><li>Provision new Qiskit Runtime service instance in alternate region, if available.</li></ul> |
+| Recovery of services | Automatically recover and restore the Qiskit Runtime service capabilities to normal operations. | Repeat any impacted jobs following recovery. |
+| Backup of user configuration data | IBM is not responsible for backup of user configuration data. | Backup of any configuration data, as needed. |
+| Backup and recovery of workload | IBM is not responsible for backup or recovery of user workload data. | Backup and recovery of your workloads, as needed. |
