--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -34,6 +34,10 @@
    "id": "67b2704d-aa3d-4e39-b417-536093be274e",
    "metadata": {},
    "source": [
+    "<Admonition type=note>\n",
+    "Dynamic circuit support on Qiskit Runtime is only available through early access. Premium Plan and Flex Plan users interested in participating in this early access should [contact support.](/docs/support#get-help-with-qiskit-and-ibm-quantum-platform)\n",
+    "</Admonition>\n",
+    "\n",
     "Dynamic circuits are powerful tools that let us measure qubits in the middle of a quantum circuit execution and then perform classical logic operations within the circuit, based on the outcome of those mid-circuit measurements.  This process is also known as _classical feedforward_. While we are still in the early days of understanding how best to take advantage of dynamic circuits, the quantum research community has already identified a number of use cases, such as the following:\n",
     "\n",
     "* Efficient quantum state preparation, such as [W-state](https://arxiv.org/abs/2412.07969) and [MPS state](https://arxiv.org/abs/2404.16083)\n",
@@ -291,18 +295,22 @@
     "\n",
     "Be aware of the following constraints when running dynamic circuits in Qiskit Runtime.  Note that as new features and improvements are added throughout the coming year, some of these limitations will be lifted.\n",
     "\n",
-    "- There is a limit of 2400 broadcasted bits in a job (not a circuit). Note that multiple `if` statements that operate on the same classical register are considered one broadcast.  For example, the following code broadcasts three bits:\n",
+    "- Due to the limited physical memory on control electronics, there is also a limit on the number of if statements and broadcasted bits. This limit is a function of the number of broadcasts and the number of broadcasted bit in a job (not a circuit).\n",
+    "\n",
+    "   When processing an if condition, measurement data needs to be transferred to the control logic to make that evaluation. A broadcast is a transfer of unique classical data, and broadcasted bits is the number of classical bits being transferred. Consider the following:\n",
+    "\n",
     "   ```python\n",
-    "   bit[32] c;\n",
-    "\n",
-    "   c[0] = measure $0;\n",
-    "   c[1] = measure $1;\n",
-    "   c[2] = measure $2;\n",
-    "\n",
-    "   if (c < 4) ...\n",
-    "   if (c < 5) ...\n",
-    "\n",
+    "   c0 = ClassicalRegister(3)\n",
+    "   c1 = ClassicalRegister(5)\n",
+    "   ...\n",
+    "   with circuit.if_test((c0, 1)) ...\n",
+    "   with circuit.if_test((c0, 3)) ...\n",
+    "   with circuit.if_test((c1[2], 1)) ...\n",
     "   ```\n",
+    "   In the previous code example, the first two `if_test`s on `c0` are considered one broadcast because the content of `c0` did not change, and thus does not need to be re-broadcasted. The `if_test` on `c1` is a second broadcast. The first one broadcasted all three bits in `c0` and the second broadcasted just oine bit, making a total of four broadcasted bits.\n",
+    "\n",
+    "   Currently, if you broadcast 60 bits each time, then the job can have approximately 300 broadcasts. If you broadcast just one bit each time, however, then the job can have 2400 broadcasts.\n",
+    "\n",
     "- Arithmetic operations are not supported.\n",
     "- Nested conditionals are not allowed. For example, the following code block will not work because it has an `if_test` inside another `if_test`:\n",
     "   <Tabs>\n",
