--- a/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
+++ b/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
@@ -350,7 +350,7 @@
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "The first step is to create a set of quantum circuits to benchmark all candidate Bell-pair links tailored to the device’s topology. We programmatically search the device coupling map for all linearly connected chains of 4 qubits. Each such chain (labelled by qubit indices $[q0–q1–q2–q3]$) will serve as a test case for the entanglement-swapping circuit. By identifying all possible length-4 paths, we ensure maximum coverage for possible grouping of qubits that could realize the protocol."
+    "The first step is to create a set of quantum circuits to benchmark all candidate Bell-pair links tailored to the device’s topology. We programmatically search the device coupling map for all linearly-connected chains of four qubits. Each such chain (labelled by qubit indices $[q0–q1–q2–q3]$) serves as a test case for the entanglement-swapping circuit. By identifying all possible length-4 paths, we ensure maximum coverage for possible grouping of qubits that could realize the protocol."
    ]
   },
   {
