--- a/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
+++ b/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
@@ -488,7 +488,7 @@
    "id": "97eb3019",
    "metadata": {},
    "source": [
-    "## Step 2: Optimize problem for quantum hardware execution\n",
+    "## Step 2: Optimize the problem for quantum hardware execution\n",
     "\n",
     "\n",
     "Before executing our circuits on real hardware, we need to transpile them to match the device’s physical constraints. Transpilation will map the abstract circuit onto the physical qubits and gate set of the chosen device. Since we have already chosen specific physical qubits for each chain (by providing an `initial_layout` to the circuit generator), we use transpiler `optimization_level=0` with that fixed layout. This tells Qiskit not to reassign qubits or perform any heavy optimizations that could alter the circuit structure. We want to keep the sequence of operations (especially the conditional gates) exactly as specified.\n",
