--- a/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
+++ b/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
@@ -373,7 +373,7 @@
    "id": "27ee6db2",
    "metadata": {},
    "source": [
-    "We generate these chains using a helper function that performs a greedy search on the device graph. It returns “stripes” of four 4-qubit chains bundled into 16-qubit groups (dynamic circuit constraints the size of the measurement register to `16` qubits at the moment of writing). Bundling allows us to run multiple 4-qubit experiments in parallel on distinct parts of the chip and make efficient use of the whole device. Each 16-qubit stripe contains four disjoint chains, meaning no qubit is reused within that group. For example, one stripe might consist of chains $[0-1-2-3]$, $[4-5-6-7]$, $[8-9-10-11]$, and $[12-13-14-15]$ all packaged together. Any qubit that was not included in a stripe is returned in the `leftover` variable"
+    "We generate these chains by using a helper function that performs a greedy search on the device graph. It returns “stripes” of four 4-qubit chains bundled into 16-qubit groups (dynamic circuits currently constrain the size of the measurement register to `16` qubits). Bundling allows us to run multiple 4-qubit experiments in parallel on distinct parts of the chip, and make efficient use of the whole device. Each 16-qubit stripe contains four disjoint chains, meaning that no qubit is reused within that group. For example, one stripe might consist of chains $[0-1-2-3]$, $[4-5-6-7]$, $[8-9-10-11]$, and $[12-13-14-15]$ all packaged together. Any qubit that was not included in a stripe is returned in the `leftover` variable."
    ]
   },
   {
