--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -80,7 +80,7 @@ An instance administrator can limit how much is spent. There are several ways to
 
 There are several ways to view the current cost limit:
 
-* **IBM Quantum Platform**: The Max cost limit is shown on the Standard tab of the [Instances & allocation tab.](https://quantum.cloud.ibm.com/instances)
+* **IBM Quantum Platform**: The Max cost limit is shown on the Pay-As-You-Go tab of the [Instances & allocation](https://quantum.cloud.ibm.com/instances) tab.
 
 * **API**:
    * IBM Quantum Platform users: [`GET /v1/instances/configuration`](/docs/api/qiskit-runtime-rest/tags/instances).
