spelling and copyedit first few sections

--- a/docs/tutorials/compilation-methods-for-hamiltonian-simulation-circuits.ipynb
+++ b/docs/tutorials/compilation-methods-for-hamiltonian-simulation-circuits.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Compilation methods for Hamiltonian simulation circuits\n",
-    "Estimated QPU usage: None (NOTE: no execution was done in this notebook as notebook is focused on the transpilation process)"
+    "Estimated QPU usage: no execution was done in this tutorial because it is focused on the transpilation process.\n",
+    "\n",
+    "{/* cspell:ignore Rustiq, nshuffles, edgecolor, Hamlib, Benchpress, Brugière, Goubault, Martiel, Dubal, Lishman, Ivrii, fontweight, fontsize, textprops, wedgeprops, startangle, autopct */}"
    ]
   },
   {
@@ -18,21 +20,19 @@
     "\n",
     "Quantum circuit compilation is a crucial step in the quantum computing workflow. It involves transforming a high-level quantum algorithm into a physical quantum circuit that adheres to the constraints of the target quantum hardware. Effective compilation can significantly impact the performance of quantum algorithms by reducing circuit depth, gate count, and execution time. This tutorial explores three distinct approaches to quantum circuit compilation in Qiskit, showcasing their strengths and applications through practical examples.\n",
     "\n",
-    "The goal of this tutorial is to enable users to understand and utilize three powerful compilation methods available in Qiskit: the transpilation with the SABRE algorithm, the AI-powered transpiler, and the Rustiq plugin. By comparing these methods across different quantum circuits, users will gain insights into how to optimize their circuits for specific goals, such as minimizing depth or gate count.\n",
+    "The goal of this tutorial is to enable users to understand and utilize these compilation methods: the transpilation with the SABRE algorithm, the AI-powered transpiler, and the Rustiq plugin. By comparing these methods across different quantum circuits, users will gain insights into how to optimize their circuits for specific goals, such as minimizing depth or gate count.\n",
     "\n",
-    "### What You’ll Learn\n",
+    "### What you will learn\n",
     "- **How to use the Qiskit transpiler with SABRE for layout and routing optimization.**\n",
     "- **How to leverage the AI transpiler for advanced, automated circuit optimization.**\n",
     "- **How to employ the Rustiq plugin for circuits requiring precise synthesis of operations, particularly in Hamiltonian simulation tasks.**\n",
     "\n",
-    "This tutorial uses three example circuits generated with Qiskit’s Patterns module to illustrate the performance of each compilation method. By the end of this notebook, users will be equipped to choose the appropriate compilation strategy based on their specific requirements and constraints.\n",
+    "This tutorial uses three example circuits generated with Qiskit’s patterns module to illustrate the performance of each compilation method. By the end of this tutorial, users will be equipped to choose the appropriate compilation strategy based on their specific requirements and constraints.\n",
     "\n",
-    "---\n",
+    "### Compilation methods overview\n",
     "\n",
-    "### Compilation Methods Overview\n",
-    "\n",
-    "#### 1. **Qiskit Transpiler with SABRE**\n",
-    "The Qiskit transpiler uses the SABRE (SWAP-based BidiREctional heuristic search) algorithm to optimize circuit layout and routing. SABRE focuses on minimizing SWAP gates and their impact on circuit depth while adhering to hardware connectivity constraints. This method is highly versatile and suitable for general-purpose circuit optimization, providing a balance between performance and computation time. To take advantage of the latest improvements in SABRE, detailed in [\\[1\\]](https://arxiv.org/abs/2409.08368), one can increase the number of trials (i.e `layout_trials=400, swap_trials=400`). For the purposes of this tutorial, we will use the default values for the number of trials, in order to compare to the qiskit's default transpiler. The advantages and parameter exploration of SABRE are covered in a separate deep dive tutorial.\n",
+    "#### 1. **Qiskit transpiler with SABRE**\n",
+    "The Qiskit transpiler uses the SABRE (SWAP-based BidiREctional heuristic search) algorithm to optimize circuit layout and routing. SABRE focuses on minimizing SWAP gates and their impact on circuit depth while adhering to hardware connectivity constraints. This method is highly versatile and suitable for general-purpose circuit optimization, providing a balance between performance and computation time. To take advantage of the latest improvements in SABRE, detailed in [\\[1\\]](https://arxiv.org/abs/2409.08368), you can increase the number of trials (for example, `layout_trials=400, swap_trials=400`). For the purposes of this tutorial, we will use the default values for the number of trials in order to compare to Qiskit's default transpiler. The advantages and parameter exploration of SABRE are covered in a separate deep-dive tutorial.\n",
     "\n",
     "#### 2. **AI Transpiler**\n",
     "\n",
@@ -288,7 +288,7 @@
     "# manager, which is much faster than server mode\n",
     "ai_routing = AIRouting(\n",
     "    backend=backend, optimization_level=3, layout_mode=\"optimize\", local_mode=True\n",
-    ")x\n",
+    ")\n",
     "\n",
     "pm_ai = generate_ai_pass_manager(\n",
     "    backend=backend,\n",
@@ -457,7 +457,7 @@
    "source": [
     "Transpile and capture metrics.\n",
     "\n",
-    "To compare the performance of the compliation methods, we will need a function to transpile the circuit and capture the metrics in a consistent manner. The function will capture the transpilation metrics, such as the depth, gate count, and transpilation time, for each compilation method. We will use this function to analyze the performance of the methods across multiple circuits in the next section."
+    "To compare the performance of the compilation methods, we will need a function to transpile the circuit and capture the metrics in a consistent manner. The function will capture the transpilation metrics, such as the depth, gate count, and transpilation time, for each compilation method. We will use this function to analyze the performance of the methods across multiple circuits in the next section."
    ]
   },
   {
