--- a/docs/guides/qiskit-transpiler-service.ipynb
+++ b/docs/guides/qiskit-transpiler-service.ipynb
@@ -25,6 +25,8 @@
    "id": "2704ef01-ddde-47a0-9a14-a70bbc72b326",
    "metadata": {},
    "source": [
+    "> **Note**: The Qiskit Transpiler Service is currently being migrated. We recommend using local mode instead.\n",
+    "> \n",
     "The Qiskit Transpiler Service provides transpilation capabilities on the cloud. In addition to the local Qiskit transpiler capabilities, your transpilation tasks can benefit from both IBM Quantum&reg; cloud resources and AI-powered transpiler passes.\n",
     "\n",
     "The Qiskit Transpiler Service offers a Python library to seamlessly integrate this service and its capabilities into your current Qiskit patterns and workflows.\n",
@@ -44,7 +46,9 @@
     "pip install qiskit-ibm-transpiler\n",
     "```\n",
     "\n",
-    "By default, the package tries to authenticate to IBM Quantum services with the defined Qiskit API key, and uses your token from the `QISKIT_IBM_TOKEN` environment variable or from the file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`).\n",
+    "The package automatically authenticates using your [IBM Quantum Platform credentials](https://quantum.cloud.ibm.com/docs/en/guides/cloud-setup) aligned with how [Qiskit Runtime manages it](https://github.com/Qiskit/qiskit-ibm-runtime/tree/0.40.1?tab=readme-ov-file#qiskit-runtime-service-on-ibm-cloud): \n",
+    "- Environment variable: `QISKIT_IBM_TOKEN`  \n",
+    "- Configuration file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`).\n",
     "\n",
     "*Note*: This package requires Qiskit SDK v1.X.\n",
     "\n",
