--- a/docs/guides/qiskit-transpiler-service.ipynb
+++ b/docs/guides/qiskit-transpiler-service.ipynb
@@ -25,8 +25,9 @@
    "id": "2704ef01-ddde-47a0-9a14-a70bbc72b326",
    "metadata": {},
    "source": [
-    "> 💡 **Note**: The Qiskit Transpiler Service is currently being migrated. We recommend using local mode instead.\n",
-    " \n",
+    "<Admonition title=\"Note\" type=\"note\">\n",
+    "  The Qiskit Transpiler Service is currently being migrated. We recommend using local mode instead.\n",
+    "</Admonition>\n",
     "The Qiskit Transpiler Service provides transpilation capabilities on the cloud. In addition to the local Qiskit transpiler capabilities, your transpilation tasks can benefit from both IBM Quantum&reg; cloud resources and AI-powered transpiler passes.\n",
     "\n",
     "The Qiskit Transpiler Service offers a Python library to seamlessly integrate this service and its capabilities into your current Qiskit patterns and workflows.\n",
