--- a/docs/guides/qiskit-transpiler-service.ipynb
+++ b/docs/guides/qiskit-transpiler-service.ipynb
@@ -44,7 +44,9 @@
     "pip install qiskit-ibm-transpiler\n",
     "```\n",
     "\n",
-    "By default, the package tries to authenticate to IBM Quantum services with the defined Qiskit API key, and uses your token from the `QISKIT_IBM_TOKEN` environment variable or from the file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`).\n",
+    "The package automatically authenticates using your [IBM Quantum Platform credentials](/docs/guides/cloud-setup) aligned with how [Qiskit Runtime manages it](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance):\n",
+    "- Environment variable: `QISKIT_IBM_TOKEN`\n",
+    "- Configuration file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`).\n",
     "\n",
     "*Note*: This package requires Qiskit SDK v1.X.\n",
     "\n",
