Apply suggestions from code review
Co-authored-by: Jessie Yu <jessieyu@us.ibm.com>

--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -295,9 +295,9 @@
     "\n",
     "Be aware of the following constraints when running dynamic circuits in Qiskit Runtime.  Note that as new features and improvements are added throughout the coming year, some of these limitations will be lifted.\n",
     "\n",
-    "- Due to the limited physical memory on control electronics, there is also a limit on the number of if statements and broadcasted bits. This limit is a function of the number of broadcasts and the number of broadcasted bit in a job (not a circuit).\n",
+    "- Due to the limited physical memory on control electronics, there is also a limit on the number of `if` statements and size of their operands. This limit is a function of the number of broadcasts and the number of broadcasted bit in a job (not a circuit).\n",
     "\n",
-    "   When processing an if condition, measurement data needs to be transferred to the control logic to make that evaluation. A broadcast is a transfer of unique classical data, and broadcasted bits is the number of classical bits being transferred. Consider the following:\n",
+    "   When processing an `if` condition, measurement data needs to be transferred to the control logic to make that evaluation. A broadcast is a transfer of unique classical data, and broadcasted bits is the number of classical bits being transferred. Consider the following:\n",
     "\n",
     "   ```python\n",
     "   c0 = ClassicalRegister(3)\n",
@@ -307,7 +307,7 @@
     "   with circuit.if_test((c0, 3)) ...\n",
     "   with circuit.if_test((c1[2], 1)) ...\n",
     "   ```\n",
-    "   In the previous code example, the first two `if_test`s on `c0` are considered one broadcast because the content of `c0` did not change, and thus does not need to be re-broadcasted. The `if_test` on `c1` is a second broadcast. The first one broadcasted all three bits in `c0` and the second broadcasted just oine bit, making a total of four broadcasted bits.\n",
+    "   In the previous code example, the first two `if_test`s on `c0` are considered one broadcast because the content of `c0` did not change, and thus does not need to be re-broadcasted. The `if_test` on `c1` is a second broadcast. The first one broadcasted all three bits in `c0` and the second broadcasted just one bit, making a total of four broadcasted bits.\n",
     "\n",
     "   Currently, if you broadcast 60 bits each time, then the job can have approximately 300 broadcasts. If you broadcast just one bit each time, however, then the job can have 2400 broadcasts.\n",
     "\n",
