--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -402,7 +402,7 @@
     "     </TabItem>\n",
     "    </Tabs>\n",
     "\n",
-    "- See [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations) for other limitations that might impact your program.\n",
+    "- See [Hardware considerations and limitations](/docs/guides/dynamic-circuits-considerations) for other limitations that might impact your program.\n",
     "- See the [QASM 3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime."
    ]
   },
